--- a/EasyLearn/UI/Resourses/Styles.xaml
+++ b/EasyLearn/UI/Resourses/Styles.xaml
@@ -42,11 +42,11 @@
     <Style x:Key="EasyCancelButton" TargetType="Button" BasedOn="{StaticResource EasyButton}">
         <Setter Property="Button.Foreground" Value="{DynamicResource EasyRed}"/>
         <Setter Property="Margin" Value="0 0 7 0"/>
-        <Setter Property="Content">
+        <!--<Setter Property="Content">
             <Setter.Value>
                 <TextBlock Text="Отмена" FontSize="14" FontFamily="Arial"/>
             </Setter.Value>
-        </Setter>
+        </Setter>-->
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Button.Background" Value="{DynamicResource EastRedDark}"/>
@@ -63,11 +63,11 @@
     <Style x:Key="EasyConfirmButton" TargetType="Button" BasedOn="{StaticResource EasyButton}">
         <Setter Property="Button.Foreground" Value="{DynamicResource EasyGreen}"/>
         <Setter Property="Margin" Value="7 0 0 0"/>
-        <Setter Property="Content">
+        <!--<Setter Property="Content">
             <Setter.Value>
                 <TextBlock Text="Добавить" FontSize="14" FontFamily="Arial"/>
             </Setter.Value>
-        </Setter>
+        </Setter>-->
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Button.Background" Value="{DynamicResource EastGreenDark}"/>
@@ -120,9 +120,6 @@
                 <Setter Property="BorderBrush" Value="{DynamicResource EasyGreen}"/>
                 <Setter Property="Background" Value="{DynamicResource EasyGreenSuperLight}"/>
             </Trigger>
-            <!--<Trigger Property="IsFocused" Value="False">
-                <Setter Property="BorderThickness" Value="0.6"/>
-            </Trigger>-->
         </Style.Triggers>
     </Style>
 
@@ -143,12 +140,16 @@
         <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="VerticalScrollBarVisibility" Value="Hidden"/>
+        <Setter Property="BorderThickness" Value="0.6"/>
+        <Setter Property="Margin" Value="0 0 0 14" />
         <Style.Triggers>
             <Trigger Property="Validation.HasError" Value="True">
-                <Setter Property="Margin" Value="0 0 0 26" />
+                <Setter Property="BorderBrush" Value="{DynamicResource EasyRed}"/>
+                <Setter Property="Background" Value="{DynamicResource EasyRedSuperLight}"/>
             </Trigger>
             <Trigger Property="Validation.HasError" Value="False">
-                <Setter Property="Margin" Value="0 0 0 14" />
+                <Setter Property="BorderBrush" Value="{DynamicResource EasyGreen}"/>
+                <Setter Property="Background" Value="{DynamicResource EasyGreenSuperLight}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
