--- a/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
+++ b/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
@@ -16,7 +16,7 @@
                             Margin="18 18 0 0"
                             Height="256"
                             Width="200"
-                            d:IsFlipped="False"
+                            d:IsFlipped="True"
                             IsFlipped="{Binding IsCardFlipped, Mode=TwoWay}">
 
         <materialDesign:Flipper.FrontContent>
@@ -143,7 +143,6 @@
                             <TextBlock Margin="8 0 0 0" 
                                        VerticalAlignment="Center"
                                        FontFamily="Arial"
-                                       Foreground="Black"
                                        Text="Настройки словаря"/>
 
                         </StackPanel>
