--- a/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
+++ b/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
@@ -7,36 +7,37 @@
              xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d">
-        <Border BorderThickness="0.6" BorderBrush="#99bbff" Background="GhostWhite" Margin="12 12 0 0" Height="{Binding CardHeight}" VerticalAlignment="Top">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="45"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="45"/>
-                </Grid.RowDefinitions>
+    <Border BorderThickness="0.6" BorderBrush="#99bbff" Background="GhostWhite" Margin="12 12 0 0" Height="{Binding CardHeight}" VerticalAlignment="Top">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="45"/>
+                <RowDefinition Height="Auto" MaxHeight="0.8"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-                <StackPanel Margin="16 10 20 10" Grid.Row="0" HorizontalAlignment="Center" Orientation="Horizontal">
-                    <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
+            <StackPanel Margin="16 10 20 10" Grid.Row="0" HorizontalAlignment="Center" Orientation="Horizontal">
+                <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
                            FontSize="19" 
                            Text="{Binding VerbValue}" 
                            VerticalAlignment="Center"
                            d:Text="Depends"/>
-                    <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
+                <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
                            FontSize="19" 
                            Text="{Binding PrepositionValue}"
                            Margin="6 0 0 0"
                            VerticalAlignment="Center" 
                            Foreground="ForestGreen"
                            d:Text="on"/>
-                </StackPanel>
+            </StackPanel>
 
-                <Border BorderBrush="LightGray" 
-                    BorderThickness="0.8"
-                    Margin="5 0.3"
-                    Grid.Row="1"
-                    Visibility="{Binding IsCommentVisible, Converter={converters:ReverseCollapseConverter}}"/>
+            <Border BorderBrush="{DynamicResource EasyGray}" 
+                    BorderThickness="0.5"
+                    Margin="0 0.3 0 0"
+                    Grid.Row="1"/>
 
-            <Grid Width="Auto" Grid.Row="2" Margin="10 0 10 0" VerticalAlignment="Center" 
+            <Grid Width="Auto" Grid.Row="2" Margin="10 8 10 0" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3">
                 <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="30"></Border>
                 <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="30" Width="85" HorizontalAlignment="Left">
@@ -49,33 +50,70 @@
                            Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="95 0 16 0"/>
             </Grid>
 
+            <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="3" VerticalAlignment="Center" 
+                  HorizontalAlignment="Center" Grid.ColumnSpan="3"
+                  Visibility="{Binding IsFirstExampleVisible, Converter={converters:ReverseCollapseConverter}}">
+                <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="45"></Border>
+                <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
+                    <TextBlock Text="Пример" FontSize="13" 
+                           FontFamily="Arial" FontWeight="Bold"
+                           Foreground="#f2f2f2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                </Border>
+                <StackPanel Margin="88 0 16 0" VerticalAlignment="Center" HorizontalAlignment="Left">
+                    <TextBlock Text="{Binding FirstExampleRussianValue}" FontSize="13" 
+                           FontFamily="Arial" FontWeight="DemiBold"
+                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 0 4"/>
+                    <TextBlock Text="{Binding FirstExampleEnglishValue}" FontSize="13" 
+                           FontFamily="Arial" FontWeight="DemiBold"
+                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                </StackPanel>
+
+            </Grid>
+
+            <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="4" VerticalAlignment="Center" 
+                  HorizontalAlignment="Center" Grid.ColumnSpan="3"
+                  Visibility="{Binding IsSecondExampleVisible, Converter={converters:ReverseCollapseConverter}}">
+                <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="45"></Border>
+                <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
+                    <TextBlock Text="Пример" FontSize="13" 
+                           FontFamily="Arial" FontWeight="Bold"
+                           Foreground="#f2f2f2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                </Border>
+                <StackPanel Margin="88 0 16 0" VerticalAlignment="Center" HorizontalAlignment="Left">
+                    <TextBlock Text="{Binding SecondExampleRussianValue}" FontSize="13" 
+                           FontFamily="Arial" FontWeight="DemiBold"
+                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 0 4"/>
+                    <TextBlock Text="{Binding SecondExampleEnglishValue}" FontSize="13" 
+                           FontFamily="Arial" FontWeight="DemiBold"
+                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                </StackPanel>
+            </Grid>
+
             <Button Style="{DynamicResource MaterialDesignFlatButton}"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
                     Foreground="Gray"
-                    Width="15"
-                    Height="15"
+                    Width="18"
+                    Height="18"
                     Padding="1"
                     Grid.Column="2"
-                    Margin="0 4 4 0"
                     ToolTip="Настройки аккаунта">
 
-                    <materialDesign:PackIcon Kind="Close" 
-                                         Width="15" 
-                                         Height="15"
+                <materialDesign:PackIcon Kind="DotsVertical" 
+                                         Width="17" 
+                                         Height="17"
                                          HorizontalAlignment="Center"
                                          VerticalAlignment="Center"/>
 
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="Click">
-                            <i:InvokeCommandAction Command="{Binding DeleteRelationCommand}"/>
-                            <i:InvokeCommandAction Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <i:InvokeCommandAction Command="{Binding OpenSettingsCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
 
-                </Button>
+            </Button>
 
-            </Grid>
-        </Border>
-        
+        </Grid>
+    </Border>
+
 </UserControl>
