--- a/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
+++ b/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
@@ -10,7 +10,7 @@
       mc:Ignorable="d" 
       xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
       d:DesignHeight="450" d:DesignWidth="800">
-    <materialDesign:DialogHost>
+    <materialDesign:DialogHost OverlayBackground="{DynamicResource MainColorSuperDark}">
         <Grid >
 
             <!--Кнопка "удалить все CommonRelations"-->
@@ -55,7 +55,7 @@
 
 
             <materialDesign:DrawerHost OpenMode="Standard" materialDesign:ShadowAssist.ShadowDepth="Depth0">
-                <materialDesign:DrawerHost.BottomDrawerContent>
+                <materialDesign:DrawerHost.TopDrawerContent>
                     <Border Background="GhostWhite" Height="58" BorderBrush="{DynamicResource MainColor}" BorderThickness="0.6 0.6 0 0">
                         <Grid VerticalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
@@ -106,7 +106,7 @@
 
                         </Grid>
                     </Border>
-                </materialDesign:DrawerHost.BottomDrawerContent>
+                </materialDesign:DrawerHost.TopDrawerContent>
                 <Grid>
                     <Button Visibility="Collapsed" Name="openMenuButton" Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}"/>
                     <Button Visibility="Collapsed" Name="closeMenuButton" Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"/>
@@ -127,21 +127,258 @@
                 
             </materialDesign:DrawerHost>
 
-            
 
-            
-            
+
+            <Button Name="openCommonRelationSettingsWindowButton"
+                    Visibility="Collapsed"
+                    Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
+
+                <Button.CommandParameter>
+                    <Grid Margin="0 14">
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition Height="Auto" MaxHeight="0.8"/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition Height="Auto" MaxHeight="0.8"/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+
+                        <Grid Margin="14 0">
+                            <!--Текстбокс для введения комментария к новому CommonRelation-->
+                            <TextBox Style="{DynamicResource EasyValidationTextBox}"
+                                     Width="260" 
+                                     Grid.Row="7"
+                                     HorizontalAlignment="Left"
+                                 materialDesign:HintAssist.IsFloating="False"
+                                 materialDesign:ValidationAssist.Suppress="True"
+                                     Padding="14 11"
+                                     Grid.ColumnSpan="3"
+                                     InputLanguageManager.InputLanguage="ru-RU"
+                                     KeyDown="OnCommentValueTextBoxKeyDown"
+                                     materialDesign:HintAssist.Hint="Комментарий">
+
+                                <TextBox.Text>
+                                    <Binding Path="AddingWindowCommentValue" UpdateSourceTrigger="PropertyChanged">
+                                        <Binding.ValidationRules>
+                                            <valudationRules:InRange Max="{x:Static constants:ModelConstants.CommonRelationCommentMaxLength}" Group="AddCommonRelation" ValidatesOnTargetUpdated="True"/>
+                                        </Binding.ValidationRules>
+                                    </Binding>
+                                </TextBox.Text>
+
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="TextChanged">
+                                        <i:InvokeCommandAction Command="{Binding UpdateConfirmCommonRelationAddingButtonAvailabilityCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+
+                            </TextBox>
+
+                            <Button Style="{StaticResource EasyCancelButton}" Height="38" Width="38"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center"
+                                    Margin="0 0 0 14"
+                                    Padding="0">
+                                <materialDesign:PackIcon Kind="TrashCanOutline" Height="28" Width="28" Foreground="{DynamicResource EasyRed}"
+                                                     VerticalAlignment="Center"
+                                                     HorizontalAlignment="Center"/>
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <i:InvokeCommandAction Command="{Binding DeleteCommonRelationCommand}"/>
+                                        <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Button>
+                        </Grid>
+
+                        <Border BorderBrush="{DynamicResource EasyGray}" 
+                                    BorderThickness="0.5"
+                                    Grid.Row="1"/>
+
+                        <Grid Grid.Row="2"
+                              Margin="14 12 14 0"
+                                  Grid.Column="0"
+                                  Grid.ColumnSpan="3">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="0.12*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBox Style="{DynamicResource EasyTextBox}"
+                                         Width="192"
+                                         Padding="14 11"
+                                         Margin="0 0 7 0"
+                                 materialDesign:HintAssist.IsFloating="False"
+                                     
+                                         KeyDown="OnExampleRussianValueTextBoxKeyDown"
+                                         InputLanguageManager.InputLanguage="ru-RU"
+                                         Name="exampleRussianValueField1"
+                                         materialDesign:HintAssist.Hint="Пример на русском">
+
+                                <TextBox.Text>
+                                    <Binding Path="ExampleRussianValue" UpdateSourceTrigger="PropertyChanged">
+                                        <Binding.ValidationRules>
+                                            <valudationRules:InRange Max="{x:Static constants:ModelConstants.ExampleValueMaxLength}" Group="AddCommonRelation" ValidatesOnTargetUpdated="True"/>
+                                        </Binding.ValidationRules>
+                                    </Binding>
+                                </TextBox.Text>
+
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="TextChanged">
+                                        <i:InvokeCommandAction Command="{Binding ValidateExampleSectionCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding CheckExampleFieldsMaxLengthVisibilityCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </TextBox>
+
+                            <TextBox Style="{DynamicResource EasyTextBox}"
+                                         HorizontalAlignment="Stretch"
+                                         Width="192"
+                                         Grid.Column="1"
+                                         Margin="7 0 0 0"
+                                         Padding="14 11"
+                                 materialDesign:HintAssist.IsFloating="False"
+                                     
+                                         KeyDown="OnExampleEnglishValueTextBoxKeyDown"
+                                         Name="exampleEnglishValueField1"
+                                         InputLanguageManager.InputLanguage="en-US"
+                                         materialDesign:HintAssist.Hint="Пример на английском">
+
+                                <TextBox.Text>
+                                    <Binding Path="ExampleEnglishValue" UpdateSourceTrigger="PropertyChanged">
+                                        <Binding.ValidationRules>
+                                            <valudationRules:InRange Max="{x:Static constants:ModelConstants.ExampleValueMaxLength}" Group="AddCommonRelation" ValidatesOnTargetUpdated="True"/>
+                                        </Binding.ValidationRules>
+                                    </Binding>
+                                </TextBox.Text>
+
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="TextChanged">
+                                        <i:InvokeCommandAction Command="{Binding ValidateExampleSectionCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding CheckExampleFieldsMaxLengthVisibilityCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </TextBox>
+
+                            <Button Style="{DynamicResource MaterialDesignIconButton}"
+                                        Foreground="{DynamicResource green}"
+                                        Height="39"
+                                        Width="39"
+                                        Margin="5 0 0 0"
+                                        Visibility="{Binding AddExampleButtonIsVisible, Converter={converters:ReverseCollapseConverter}}"
+                                        Name="addExampleButton1"
+                                        HorizontalAlignment="Center" VerticalAlignment="Top"
+                                        Grid.Column="2">
+                                <materialDesign:PackIcon Kind="Add" />
+
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <i:InvokeCommandAction Command="{Binding AddExampleViewCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding ClearExampleAddingFieldsCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding FocusExampleRussianValueFieldCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Button>
+
+                            <Grid Height="39"
+                                      Width="39"
+                                      Visibility="{Binding ExamleWarningIconIsVisible, Converter={converters:ReverseCollapseConverter}}"
+                                      Margin="5 0 0 0"
+                                      HorizontalAlignment="Center" VerticalAlignment="Top"
+                                      ToolTip="Для добавления примера необходмо заполнить поля слева"
+                                      MouseEnter="WarningIcon_MouseEnter"
+                                      Background="Transparent"
+                                      MouseLeave="WarningIcon_MouseLeave"
+                                      Grid.Column="2" >
+
+                                <materialDesign:PackIcon Kind="AlertCircle" Height="20" Width="20" Foreground="Orange" Name="warningIcon" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            </Grid>
+
+
+                        </Grid>
+
+                        <ItemsControl ItemsSource="{Binding ExampleViews}" 
+                                          Grid.Row="3"
+                                          Grid.Column="0"
+                                          Margin="0 0 0 14"
+                                          Width="450"
+                                          Grid.ColumnSpan="3">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                        </ItemsControl>
+
+
+                        <Border BorderBrush="{DynamicResource EasyGray}" 
+                                    BorderThickness="0.5"
+                                    Grid.Row="4"/>
+
+                        <!--Кнопки отмены и подтверждения добавления нового CommonRelation-->
+                        <Grid Grid.Row="5"
+                                  Width="230"
+                              Margin="14 12 14 0"
+                                  HorizontalAlignment="Center"
+                                  VerticalAlignment="Center">
+
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+
+                            <!--Кнопка отмены-->
+                            <Button Style="{DynamicResource EasyCancelButton}"
+                                    Name="newVerbPrepositionAddingWindowCancelButton">
+
+                                <TextBlock Text="Отмена" FontSize="14" FontFamily="Arial"/>
+
+                                <!--Действия кнопки при её нажатии-->
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+
+                            </Button>
+
+                            <!--Кнопка подтверждения-->
+                            <Button Style="{DynamicResource EasyConfirmButton}"
+                                    Grid.Column="1"
+                                    Name="newVerbPrepositionAddingButton"
+                                    IsEnabled="{Binding IsConfirmVerbPrepositionAddingButtonEnabled}">
+
+                                <TextBlock Text="Сохранить" FontSize="14" FontFamily="Arial"/>
+
+                                <!--Действия кнопки при её нажатии-->
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding UpdateCommonRelationCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+
+                            </Button>
+
+                        </Grid>
+
+                    </Grid>
+                </Button.CommandParameter>
+
+            </Button>
 
             <!--Кнопка добавления нового CommonRelation-->
             <Button Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
                         Name="openNewCommonRelationAddingWindowButton"
                         Visibility="Collapsed">
 
-                <i:Interaction.Triggers>
+                <!--<i:Interaction.Triggers>
                     <i:EventTrigger EventName="Click">
                         <i:InvokeCommandAction Command="{Binding ClearAddingWindowCommand}"/>
                     </i:EventTrigger>
-                </i:Interaction.Triggers>
+                </i:Interaction.Triggers>-->
 
                 <!--Диалоговое окно добавления нового CommonRelation-->
                 <Button.CommandParameter>
@@ -392,7 +629,7 @@
                                       MouseLeave="WarningIcon_MouseLeave"
                                       Grid.Column="2" >
 
-                                <materialDesign:PackIcon Kind="AlertCircle" Height="20" Width="20" Foreground="Orange" Name="warningIcon" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                <materialDesign:PackIcon Kind="AlertCircle" Height="20" Width="20" Foreground="Orange" Name="warningIcon1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             </Grid>
 
 
@@ -481,6 +718,7 @@
                             <Button Style="{DynamicResource EasyConfirmButton}"
                                     Grid.Column="1"
                                     Name="newCommonRelationAddingButton"
+                                    Visibility="{Binding IsModalWindowOnUpdateMode, Converter={converters:ForwardCollapseConverter}}"
                                     IsEnabled="{Binding IsConfirmCommonRelationAddingButtonEnabled}">
 
                                 <TextBlock Text="Добавить" FontSize="14" FontFamily="Arial"/>
@@ -490,6 +728,24 @@
                                     <i:EventTrigger EventName="Click">
                                         <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
                                         <i:InvokeCommandAction Command="{Binding CreateCommonRelationCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+
+                            </Button>
+
+                            <Button Style="{DynamicResource EasyConfirmButton}"
+                                    Grid.Column="1"
+                                    Name="updateCommonRelationButton"
+                                    Visibility="{Binding IsModalWindowOnUpdateMode, Converter={converters:ReverseCollapseConverter}}"
+                                    IsEnabled="{Binding IsConfirmCommonRelationAddingButtonEnabled}">
+
+                                <TextBlock Text="Сохранить" FontSize="14" FontFamily="Arial"/>
+
+                                <!--Действия кнопки при её нажатии-->
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Click">
+                                        <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding UpdateCommonRelationCommand}"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
 
